--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="stylesheets.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width", initial-scale=1.0>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="landing page for Saas company">
     <title>landing page</title>
     <meta name="referrer" content="no-referrer">
